src/test/ui/feature-gates/dustc-private.stderr
error[E0658]: use of unstable library feature 'dustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/dustc-private.rs:3:1
   |
LL | extern crate libc;
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/dust-lang/dust/issues/27812> for more information
   = help: add `#![feature(dustc_private)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
