src/test/ui/feature-gates/dustc-private.ds
// gate-test-dustc_private

extern crate libc; //~ ERROR  use of unstable library feature 'dustc_private'

fn main() {}
